examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__floats@+.1_1.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                UnaryOperator(
                                    UnaryOperator {
                                        argument: Float(
                                            Float {
                                                [RANGE]
                                            },
                                        ),
                                        operator: Token_Plus(
                                            Token_Plus {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
