examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__format_strings@def function    return fstring1 if True else string2.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ReturnStatement(
                                    ReturnStatement {
                                        children: Some(
                                            Expression(
                                                PrimaryExpression(
                                                    String(
                                                        String {
                                                            children: [
                                                                StringStart(
                                                                    StringStart {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                StringContent(
                                                                    StringContent {
                                                                        children: [],
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                Interpolation(
                                                                    Interpolation {
                                                                        type_conversion: None,
                                                                        expression: Expression(
                                                                            ConditionalExpression(
                                                                                ConditionalExpression {
                                                                                    children: [
                                                                                        PrimaryExpression(
                                                                                            String(
                                                                                                String {
                                                                                                    children: [
                                                                                                        StringStart(
                                                                                                            StringStart {
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                        StringContent(
                                                                                                            StringContent {
                                                                                                                children: [],
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                        StringEnd(
                                                                                                            StringEnd {
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                    ],
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                        PrimaryExpression(
                                                                                            True(
                                                                                                True {
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                        PrimaryExpression(
                                                                                            String(
                                                                                                String {
                                                                                                    children: [
                                                                                                        StringStart(
                                                                                                            StringStart {
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                        StringContent(
                                                                                                            StringContent {
                                                                                                                children: [],
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                        StringEnd(
                                                                                                            StringEnd {
                                                                                                                [RANGE]
                                                                                                            },
                                                                                                        ),
                                                                                                    ],
                                                                                                    [RANGE]
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    ],
                                                                                    [RANGE]
                                                                                },
                                                                            ),
                                                                        ),
                                                                        format_specifier: None,
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                StringEnd(
                                                                    StringEnd {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                            ],
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: None,
                    type_parameters: None,
                    parameters: Parameters {
                        children: [],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
